# Coin-Collector

./: CMakeLists.txt  README.md
make_project/: CMakeCache.txt  CoinCollector  Makefile  cmake_install.cmake
src/: Camera.cpp  Camera.h  Constants.h  Game.cpp  Game.h  Object.cpp  Object.h  Physics.h  Player.cpp  Player.h  Texture.cpp  Texture.h  main.cpp
vs_project/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CoinCollector.sln  CoinCollector.vcxproj  CoinCollector.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
